# netaddr

./: .gitattributes  .gitignore  .readthedocs.yaml  AUTHORS  CHANGELOG  CHANGELOG.rst  COPYRIGHT  GLOSSARY  HACKING.md  INSTALL  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  REFERENCES  RELEASE  THANKS  THANKS.rst  Vagrantfile  circle.yml  do.py  pyproject.toml  pytest.ini  python-netaddr.spec  release.bat  release.py  release.sh  requirements-dev.in  requirements.in  requirements.txt  runtests.py  setup.cfg  setup.py  setup_egg.py
.circleci/: config.yml
.github/workflows/: ci.yml
docs/: Makefile  epydoc.cfg  epydoc.css  make.bat  pyproject.toml  requirements.txt
docs/api/: api-objects.txt  class-tree.html  frames.html  help.html  identifier-index.html  index.html  module-tree.html  netaddr-module.html  netaddr-pysrc.html  netaddr.AddrConversionError-class.html  netaddr.AddrFormatError-class.html  netaddr.address-module.html  netaddr.address-pysrc.html  netaddr.address.Addr-class.html  netaddr.address.AddrRange-class.html  netaddr.address.AddrTypeDescriptor-class.html  netaddr.address.AddrValueDescriptor-class.html  netaddr.address.CIDR-class.html  netaddr.address.EUI-class.html  netaddr.address.FormatDescriptor-class.html  netaddr.address.IP-class.html  netaddr.address.IPRange-class.html  netaddr.address.IPRangeSet-class.html  netaddr.address.KlassDescriptor-class.html  netaddr.address.PrefixLenDescriptor-class.html  netaddr.address.StrategyDescriptor-class.html  netaddr.address.Wildcard-class.html  netaddr.core-module.html  netaddr.core-pysrc.html  netaddr.core.PrettyPrinter-class.html  netaddr.core.Publisher-class.html  netaddr.core.Subscriber-class.html  netaddr.eui-module.html  netaddr.eui-pysrc.html  netaddr.eui.FileIndexer-class.html  netaddr.eui.IAB-class.html  netaddr.eui.IABIndexParser-class.html  netaddr.eui.NotRegisteredError-class.html  netaddr.eui.OUI-class.html  netaddr.eui.OUIIndexParser-class.html  (+33 more)
docs/source/: api.rst  authors.rst  changes.rst  conf.py  contributors.rst  copyright.rst  how-to.rst  index.rst  installation.rst  introduction.rst  license.rst  reference.rst  references.rst  tutorial_01.rst  tutorial_02.rst  tutorial_03.rst  tutorials.rst
docs/source/dev-how-to/: index.rst  release.rst
docs/source/reference/: cli.rst  compatibility.rst
docs/source/static/: custom.css
experimental/: new_address_internals.py
lib/netaddr/: __init__.py  compat.py  core.py  fbsocket.py
lib/netaddr/eui/: __init__.py  ieee.py  oui.idx  oui.txt
lib/netaddr/ip/: __init__.py  glob.py  iana.py  ipv4-address-space  nmap.py  rfc1924.py  sets.py
lib/netaddr/strategy/: __init__.py  eui48.py  ipv4.py  ipv6.py
lib/netaddr/tests/: __init__.py  netaddr_coverage.sh  test.py
lib/netaddr/tests/2.x/: test.py
lib/netaddr/tests/3.x/: __init__.py  netaddr_coverage.sh  (+1 more)
lib3/netaddr/: core.py  fbsocket.py
lib3/netaddr/eui/: __init__.py  iab.idx  ieee.py  oui.idx
lib3/netaddr/ip/: __init__.py  iana.py  intset.py  ipv4-address-space  rfc1924.py  sets.py
lib3/netaddr/strategy/: __init__.py  eui48.py  eui64.py  ipv4.py  ipv6.py
lib3/netaddr/tests/: __init__.py  netaddr_coverage_report.txt
netaddr/: __init__.py  address.py  cli.py  compat.py  core.py  fallback.py  fbsocket.py  ipglob.py  misc.py  strategy.py  util.py
netaddr/contrib/: __init__.py  subnet_splitter.py
netaddr/eui/: __init__.py  iab.idx  iab.txt  ieee.py  oui.idx  oui.txt  oui36.idx  oui36.txt
netaddr/interfaces/: IPy.py  TODO.txt  test_IPy.py
netaddr/ip/: __init__.py  glob.py  iana.py  intset.py  ipv4-address-space  ipv4-address-space.xml  ipv6-address-space.xml  ipv6-unicast-address-assignments.xml  multicast-addresses  multicast-addresses.xml  nmap.py  rfc1924.py  set.py  sets.py
netaddr/strategy/: __init__.py  eui48.py  eui64.py  ipv4.py  ipv6.py
netaddr/tests/: .coverage  __init__.py  coverage.sh  coverage_report.txt  netaddr_coverage.bat  netaddr_coverage.sh  netaddr_coverage_report.txt  run_all.py  test.py
netaddr/tests/core/: pubsub.txt  test_compat.py
netaddr/tests/eui/: eui.txt  eui64.txt  sample_incorrect_encoded_oui.txt  test_eui.py  test_ieee_parsers.py  tutorial.txt
netaddr/tests/ip/: abbreviated.txt  boundaries.txt  cidr.txt  constructor.txt  intset.txt  ipglob.txt  ipv6_formatting.txt  matches.txt  multicast.txt  rfc1924.txt  sets.txt  socket_fallback.txt  subnet.txt  test_ip.py  test_ip_categories.py  test_ip_network_categories.py  test_ip_ranges.py  test_ip_sets.py  test_ip_v4.py  test_ip_v6.py  test_old_specs.py  test_platform_osx.py  test_socket_module_fallback.py  test_supernets.py  tutorial.txt
netaddr/tests/strategy/: ipv4.txt  test_eui48_strategy.py  test_ipv4_strategy.py  test_ipv6_strategy.py
netaddr/tools/: nash  netaddr
test/: test_cidr_v4.py  test_cidr_v6.py  test_ip4.py  test_ip6.py  test_ip_categories.py  test_ip_globs.py  test_ip_ranges.py  test_ip_sets.py  test_ip_v4.py  test_nmap.py  test_old_specs.py
test/eui/: test_eui.py  test_ieee_parsers.py  test_pubsub.py
test/ip/: test_ip_comparisons.py  test_ip_globs.py  test_ip_ranges.py  test_ip_sets.py  test_ip_v4.py  test_ip_v6.py  test_old_specs.py
tests/: ipv4strategy_speed_tests.py  ipv6strategy_speed_tests.py  iterator_speed_tests.py  ut_address.py  ut_netaddr.py  ut_run_all.py  ut_strategy.py  ut_use_cases.py
trunk/: CHANGELOG  GLOSSARY  INSTALL  LICENSE  MANIFEST.in  README
trunk/docs/api/: api-objects.txt  help.html  identifier-index.html  netaddr-module.html  netaddr.AddrConversionError-class.html  netaddr.AddrFormatError-class.html  netaddr.address-module.html  netaddr.address.IP-class.html  netaddr.address.Wildcard-class.html  netaddr.strategy-module.html  netaddr.strategy-pysrc.html  netaddr.strategy.AddrStrategy-class.html  netaddr.strategy.EUI48Strategy-class.html  netaddr.strategy.IPv4Strategy-class.html  redirect.html  toc-netaddr.strategy-module.html  toc.html
trunk/netaddr/: __init__.py  address.py
trunk/tests/: ut_address.py  ut_strategy.py
tutorials/: run_doctests.py
tutorials/2.x/eui/: tutorial.txt
tutorials/2.x/ip/: sets.txt  tutorial.txt
(+112 files in other folders)
