[metadata]
name = netaddr
author = David P. D. Moss, Stefan Nordhausen et al
author_email = drkjam@gmail.com
license = BSD-3-Clause
description = A network address manipulation library for Python
keywords =
    Networking, Systems Administration, IANA, IEEE, CIDR, IP
    IPv4, IPv6, CIDR, EUI, MAC, MAC-48, EUI-48, EUI-64
url = https://github.com/drkjam/netaddr/
download_url = https://pypi.org/project/netaddr/
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications
    Topic :: Documentation
    Topic :: Education
    Topic :: Education :: Testing
    Topic :: Home Automation
    Topic :: Internet
    Topic :: Internet :: Log Analysis
    Topic :: Internet :: Name Service (DNS)
    Topic :: Internet :: Proxy Servers
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Internet :: WWW/HTTP :: Site Management
    Topic :: Security
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Traffic Generation
    Topic :: System :: Benchmark
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Topic :: System :: Installation/Setup
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Networking
    Topic :: System :: Networking :: Firewalls
    Topic :: System :: Networking :: Monitoring
    Topic :: System :: Networking :: Time Synchronization
    Topic :: System :: Recovery Tools
    Topic :: System :: Shells
    Topic :: System :: Software Distribution
    Topic :: System :: Systems Administration
    Topic :: System :: System Shells
    Topic :: Text Processing
    Topic :: Text Processing :: Filters
    Topic :: Utilities
platforms = OS, Independent

[options]
packages =
    netaddr
    netaddr.ip
    netaddr.eui
    netaddr.strategy
    netaddr.contrib
python_requires = >= 2.5
install_requires =
    importlib-resources;python_version<"3.7"
setup_requires = setuptools>=30.3.0; wheel; setuptools_scm

[options.package_data]
netaddr.ip = *.xml
netaddr.eui = *.txt; *.idx

[options.entry_points]
console_scripts = netaddr = netaddr.cli:main

[bdist_wheel]
universal = 1
